# ECommerce

./: .gitignore
backend/: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yml  rustfmt.toml
backend/config/: base.toml  dev.toml
backend/migrations/: 0001_create_identities_table.down.sql  0001_create_identities_table.up.sql  0002_create_users_table.up.sql  0003_create_vendors_table.down.sql  0003_create_vendors_table.up.sql  0004_create_products_table.down.sql  0004_create_products_table.up.sql  001_identities.sql  001_users.sql  002_users.sql  002_vendors.sql  003_products.sql  003_vendor_users.sql  003_vendors.up.sql  004_categories.sql  004_products.sql  005_products.sql  initial_fills.sql
backend/src/: app_state.rs  bootstrap.rs  lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/extractors/: mod.rs
backend/src/api/handlers/: mod.rs
backend/src/api/middleware/: mod.rs
backend/src/config/: app_env.rs  config.rs  config_dto.rs  config_error.rs  mod.rs  settings.rs  settings_dto.rs  settings_error.rs
backend/src/config/auth/: auth_config.rs  auth_config_dto.rs  auth_config_error.rs  mod.rs
backend/src/config/cache/: mod.rs
backend/src/config/database/: database_config.rs  database_config_dto.rs  database_config_error.rs  mod.rs
backend/src/config/payment/: mod.rs
backend/src/config/payment_config/: payment_config.rs
backend/src/config/server/: mod.rs  server_config.rs  server_config_dto.rs
backend/src/config/server_config/: server_config.rs
backend/src/config/storage/: mod.rs  storage_config.rs  storage_config_dto.rs  storage_config_error.rs
backend/src/config/telemetry/: mod.rs  observability_config.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/auth/: jwt_service.rs
backend/src/infrastructure/config/: app_env.rs  config.rs  config_dto.rs  config_error.rs  mod.rs  settings.rs  settings_dto.rs  settings_error.rs
backend/src/infrastructure/database/: connection.rs  connection_pool.rs
backend/src/infrastructure/http/: mod.rs
backend/src/modules/: mod.rs
(+440 files in other folders)
