[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.19"

axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
redis = "1.0.4"

serde = { version = "1.0.228", features = ["derive"] }
humantime-serde = "1.1.1"
secrecy = { version = "0.10.3", features = ["serde"] }

thiserror = "2.0.18"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
