[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.19"

chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.0", features = ["v7", "serde"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
humantime-serde = "1.1.1"
secrecy = { version = "0.10.3", features = ["serde"] }
argon2 = { version = "0.5.3" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "request-id"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = "1.2.0"

thiserror = "2.0.18"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
async-trait = "0.1.89"

sha2 = "0.11.0"
rand = "0.10.1"